--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-rewards": "^2.0.4",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
